--- a/.github/workflows/pr-checks.yml
+++ b/.github/workflows/pr-checks.yml
@@ -2,7 +2,7 @@
 name: PR checks
 on:
   push:
-    branches: ["main"]
+    branches: ['main']
   pull_request:
 
 permissions:
@@ -35,7 +35,7 @@ jobs:
           go-version-input: oldstable
           go-package: ./...
   golangci:
-    name: lint
+    name: 'lint'
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
@@ -67,7 +67,7 @@ jobs:
     # https://github.com/crate-ci/typos
     # Add exceptions to _typos.toml
     # install and run locally: cargo install typos-cli && typos
-    name: typos
+    name: 'typos'
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Actions Repository
@@ -76,7 +76,7 @@ jobs:
       - name: Check spelling of entire workspace
         uses: crate-ci/typos@v1
   markdownlint:
-    name: markdownlint
+    name: 'markdownlint'
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
