--- a/.markdownlint-cli2.jsonc
+++ b/.markdownlint-cli2.jsonc
@@ -3,10 +3,10 @@
   "fix": true,
   // Ignore files referenced by .gitignore (only valid at root)
   "gitignore": true,
-
   // Define glob expressions to ignore
   "ignores": [
-    "LICENSE.md"
+    "LICENSE.md",
+    "CHANGELOG.md"
   ],
   "config": {
     // MD013/line-length : Line length : https://github.com/DavidAnson/markdownlint/blob/v0.32.1/doc/md013.md
