--- a/.github/workflows/pr-checks.yml
+++ b/.github/workflows/pr-checks.yml
@@ -2,7 +2,7 @@
 name: PR checks
 on:
   push:
-    branches: ["main"]
+    branches: ['main']
   pull_request:
 
 permissions:
@@ -11,31 +11,8 @@ permissions:
   # pull-requests: read
 
 jobs:
-  # Check if there is any dirty change for go mod tidy
-  go-mod:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-go@v5
-        with:
-          go-version: stable
-      - name: Check go mod
-        run: |
-          go mod tidy
-          git diff --exit-code go.mod
-          git diff --exit-code go.sum
-  govulncheck:
-    runs-on: ubuntu-latest
-    name: Run govulncheck
-    steps:
-      - uses: actions/checkout@v4
-      - id: govulncheck
-        uses: golang/govulncheck-action@v1
-        with:
-          go-version-input: oldstable
-          go-package: ./...
   golangci:
-    name: lint
+    name: 'lint'
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
@@ -67,7 +44,7 @@ jobs:
     # https://github.com/crate-ci/typos
     # Add exceptions to _typos.toml
     # install and run locally: cargo install typos-cli && typos
-    name: typos
+    name: 'typos'
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Actions Repository
@@ -76,7 +53,7 @@ jobs:
       - name: Check spelling of entire workspace
         uses: crate-ci/typos@v1
   markdownlint:
-    name: markdownlint
+    name: 'markdownlint'
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
